Refactor SecurityConfiguration: enhance JWT handling with custom validation, improve CORS configuration, and implement detailed exception handling